--- a/frontend-html/index.html
+++ b/frontend-html/index.html
@@ -1,24 +1,19 @@
+<!-- index.html -->
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interação com IA</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <title>IA Chat</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
-    <div class="chat-area" id="chatArea"></div>
-    <form id="iaForm">
-      <div class="input-area">
-        <textarea id="inputText" placeholder="Digite sua mensagem..." rows="1" cols="50"></textarea>
-        <button type="submit"><i class="fas fa-paper-plane"></i></button>
-      </div>
-    </form>
-  </div>
-  <div id="loading" class="loading">Carregando...</div>
+  <div id="chat"></div>
+  <form id="chat-form">
+    <input type="text" id="user-input" placeholder="Digite sua mensagem..." required />
+    <button type="submit">Enviar</button>
+  </form>
+  <div id="loader" class="loader hidden"></div>
   <script src="script.js"></script>
 </body>
 </html>
